# meal-analyzer-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/images/: README.md
src/meal_analyzer_mcp/: gemini_client.py  schema.py  server.py  web.py
tests/images/: README.md
