[project]
name = "meal-analyzer-mcp"
version = "0.1.0"
description = "MCP server that analyzes meal photos with Gemini and returns structured calorie/nutrition estimates"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.6.0",
    "google-genai>=0.7.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.scripts]
meal-analyzer-mcp = "meal_analyzer_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meal_analyzer_mcp"]
